[package]
name = "shared_serve"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
nix = { version = "0.29.0", features = ["mman", "fs"] }
threadpool = "1.8.1"
ctrlc = { version = "3.4.5", features = ["termination"] }


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"